# policywriter-ai-take-home-assessment

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: parse_pdf_resume.py  parse_word_resume.py
src/resume_parser/: __init__.py  coordinator.py  exceptions.py  framework.py  logging_config.py  models.py
src/resume_parser/extractors/: __init__.py  base.py  email_extractor.py  name_extractor.py  skills_extractor.py
src/resume_parser/parsers/: __init__.py  base.py  pdf_parser.py  word_parser.py
tests/: conftest.py  test_coordinator.py  test_framework.py  test_integration.py  test_models.py
tests/test_extractors/: test_email_extractor.py  test_name_extractor.py  test_skills_extractor.py
tests/test_parsers/: test_pdf_parser.py  test_word_parser.py
